--- a/.env
+++ b/.env
@@ -1,25 +1,25 @@
 # 全局 API 地址
 ## 需部署 API，详见 https://github.com/Binaryify/NeteaseCloudMusicApi
 # VITE_MUSIC_API = "https://ncm-api.prod.gbclstudio.cn/"
-VITE_MUSIC_API = "https://ncm-api.prod.gbclstudio.cn/"
+VITE_MUSIC_API = "https://ncm-api.starmi.us.kg/"
 
 # 网易云解灰 API 地址（可选功能）
 ## 需部署 API，详见 https://github.com/imsyy/UNM-Server#%E8%BF%90%E8%A1%8C
-VITE_UNM_API = "https://unm-api.prod.gbclstudio.cn/"
-# VITE_UNM_API = "https://uni-api.prod.gbclstudio.cn/"
+VITE_UNM_API = "https://unm.starmi.us.kg/"
+# VITE_UNM_API = "https://unm.starmi.us.kg/"
 
 # 站点标题
-VITE_SITE_TITLE = "GMPlayer"
-VITE_SITE_ANTHOR = "GBCLStudio"
+VITE_SITE_TITLE = "星觅的音乐小站"
+VITE_SITE_ANTHOR = "starmi"
 VITE_SITE_KEYWORDS = "GMPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器,在线音乐播放器"
 VITE_SITE_DES = "一个简约的在线音乐播放器，具有音乐搜索、播放、每日推荐、私人FM、歌词显示、歌曲评论、网易云登录与云盘等功能"
-VITE_SITE_URL = "music.gbclstudio.cn"
+VITE_SITE_URL = "music.starmi.us.kg"
 VITE_SITE_LOGO = "/images/logo/favicon.svg"
 VITE_SITE_APPLE_LOGO = "/images/logo/favicon-apple.png"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_ICP = "粤ICP备2022073442号-1"
+VITE_ICP = ""
 
 # 公告配置
 ## 若无需公告，请将任意一项设为空即可
